--- a/htmlcode.html
+++ b/htmlcode.html
@@ -41,7 +41,7 @@
                 I can blend technology and art to deliver engaging digital experiences.”</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/thilipkumar-manoharan-6b9aa9370/"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/thilip1229/Portfolio"><i class='bx bxl-github'></i></a>
                 <a href="https://www.facebook.com/profile.php?id=61576699797330"><i class='bx bxl-facebook'></i></a>
             </div>
             <a href="https://drive.google.com/file/d/152Y2eiHB-jobdB1Yi30D_mv5Ow7XgLWK/view?usp=sharing" class="button">Download CV</a>
@@ -171,7 +171,7 @@
     <footer class="footer">
         <div class="social">
             <a href="https://www.linkedin.com/in/thilipkumar-manoharan-6b9aa9370/"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/thilip1229/Portfolio"><i class='bx bxl-github'></i></a>
             <a href="https://www.facebook.com/profile.php?id=61576699797330"><i class='bx bxl-facebook'></i></a>
         </div>
 
@@ -180,5 +180,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="jscode.js"></script>
 </body>
+
 
 </html>
